--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "smz-hack",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Gro-For.github.io/web-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "eslint-config-airbnb": "^18.1.0",
-    "gh-pages": "^2.2.0",
     "google-map-react": "^1.1.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -21,9 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --fix",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "lint": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
